# ctbot-motorctl

./: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  pico_sdk_import.cmake
lib/crc32/src/: crc32.cpp  crc32.h
lib/pid/src/: pid_v1.cpp  pid_v1.h
src/: FreeRTOSConfig.h  freertos_runtime_stats.cpp  freertos_runtime_stats.h  lwipopts.h  main.cpp  motor.cpp  motor.h  ntp_client.cpp  ntp_client.h  rotary_encoder.cpp  rotary_encoder.h  rotary_encoder.pio  speed_control.cpp  speed_control.h  support.c  tcp_server.cpp  tcp_server.h  uart_tcp.cpp  uart_tcp.h  wifi_config.h.in
